--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "age-project"]
 	path = age-project
-	url = git@github.com:adrian-castravete/age-project
+	url = https://github.com/adrian-castravete/age-project
